Add covid policy, TA hours

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <li><a href="#_course_info">Course Info</a>
 <ul class="sectlevel2">
 <li><a href="#_meeting_times">Meeting Times</a></li>
-<li><a href="#_ta_office_hours_tdb">TA Office Hours <strong>TDB</strong></a></li>
+<li><a href="#_ta_office_hours">TA Office Hours</a></li>
 </ul>
 </li>
 <li><a href="#_text_and_software">Text and Software</a></li>
@@ -32,6 +32,7 @@
 </li>
 <li><a href="#_academic_integrity">Academic Integrity</a></li>
 <li><a href="#_academic_accommodations">Academic Accommodations</a></li>
+<li><a href="#_covid_policy">Covid Policy</a></li>
 <li><a href="#_external_links">External Links</a></li>
 </ul>
 </div>
@@ -47,6 +48,9 @@
 </li>
 <li>
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
+</li>
+<li>
+<p>TA hours for the first week will be Aug 30, Aug 31, and Sept 1 (Tue-Thu) from 6-10pm in Park 231!</p>
 </li>
 </ul>
 </div>
@@ -505,22 +509,27 @@ and debug computer programs as well as learn solve problems like a computer scie
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours (Normoyle)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TDB</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesday, 4-5 PM EST, Thursday afternoons (TBD)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 200B</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Wednesday, 4-5 PM EST, Thursday afternoons (By appointment)</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours (Poliak)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Park 200C</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Wednesday, 10-11am EST</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">TA Office Hours</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sunday-Thursday, 6-10 PM EST</p></td>
+</tr>
 </tbody>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_ta_office_hours_tdb">TA Office Hours <strong>TDB</strong></h3>
+<h3 id="_ta_office_hours">TA Office Hours</h3>
 <div class="paragraph">
-<p>All TA office hours will be in person in the computer science labs in the Park
-Science Center.</p>
+<p>All TA office hours will be in person in the computer science labs (<strong>Park 231</strong>) in the Park
+Science Center. TA office hours will be in the evenings, Sun-Thurs 6-10pm</p>
 </div>
 </div>
 </div>
@@ -736,6 +745,23 @@ Services website. (<a href="http://www.brynmawr.edu/access-services/" class="bar
 </div>
 </div>
 <div class="sect1">
+<h2 id="_covid_policy">Covid Policy</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Lectures and labs will have a <em>mask-friendly</em> policy.
+All are welcome to wear a mask if they so wish, but no one
+is mandated to wear a mask.</p>
+</div>
+<div class="paragraph">
+<p>If you are symptomatic
+(coughing, sore throat, or running nose),
+please either stay at home or come into campus with a mask. Lectures will be recorded
+so they can be watched later. Missed lab activities will have their grade credit
+transferred to the final.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_external_links">External Links</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -759,7 +785,7 @@ Services website. (<a href="http://www.brynmawr.edu/access-services/" class="bar
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 10:39:35 -0400
+Last updated 2022-08-27 14:26:45 -0400
 </div>
 </div>
 </body>
