update schedule and late policy

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <li>
 <p>TA hours for the first week will be Aug 30, Aug 31, and Sept 1 (Tue-Thu) from 6-10pm in Park 231!</p>
 </li>
+<li>
+<p>Current week notes: <a href="#week01">Week 01</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -81,7 +84,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Aug 29</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Course introduction, Hello World</strong> <a id="hello"></a></p>
+<p><strong>Course introduction, Hello World</strong> <a id="week01"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -103,6 +106,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Setting up your development environment</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -110,7 +116,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 5</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Variables and data types</strong> <a id="variables"></a></p>
+<p><strong>Variables and data types</strong> <a id="week02"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -132,6 +138,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -139,7 +148,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 12th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Conditionals</strong> <a id="if"></a></p>
+<p><strong>Conditionals</strong> <a id="week03"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -150,13 +159,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
-<p><a href="jam1Guide.html">Jam 1 Study Guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -165,7 +174,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 19th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Loops</strong> <a id="loop"></a></p>
+<p><strong>Loops</strong> <a id="week04"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -176,13 +185,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
-<p>Code Jam I: Variables and data types</p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep19.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -191,7 +200,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 26th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Arrays, Strings, File I/O</strong> <a id="arrays"></a></p>
+<p><strong>Arrays, Strings, File I/O</strong> <a id="week05"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -202,13 +211,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
-<p><a href="jam2Guide.html">Jam 2 Study Guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep26.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -217,7 +226,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 3rd</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="functions1"></a></p>
+<p><strong>Functions</strong> <a id="week06"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -232,6 +241,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -251,7 +263,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 17th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="functions2"></a></p>
+<p><strong>Functions</strong> <a id="week07"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -267,6 +279,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -274,7 +289,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 24th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Object oriented programming: using objects</strong> <a id="objects1"></a></p>
+<p><strong>Object oriented programming: using objects</strong> <a id="week08"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -290,6 +305,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-oct24.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code jam 03, <a href="jam3Guide.html">Jam 3 Study Guide</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -297,15 +315,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of October 31st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Objects oriented programming: creating objects</strong> <a id="objects2"></a></p>
+<p><strong>Objects oriented programming: creating objects</strong> <a id="week09"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
-</li>
-<li>
-<p><a href="jam3Guide.html">Jam 3 Guide</a></p>
 </li>
 <li>
 <p><a href="asst08.html">Assignment 8</a>: **</p>
@@ -316,6 +331,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -323,7 +341,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 7th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Search and sort</strong> <a id="search"></a></p>
+<p><strong>Search and sort</strong> <a id="week10"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -334,9 +352,6 @@ on lecture content, worksheets, and assignments.</p>
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href="jam4Guide.html">Jam 4 Guide</a></p>
-</li>
-<li>
 <p><a href="asst09.html">Assignment 9</a>: *Due *</p>
 </li>
 <li>
@@ -345,6 +360,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-nov07.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code jam 04, <a href="jam4Guide.html">Jam 4 Study Guide</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -352,7 +370,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 14th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>More search and sort; Runtime analysis</strong> <a id="analysis"></a></p>
+<p><strong>More search and sort; Runtime analysis</strong> <a id="week11"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -368,6 +386,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -375,7 +396,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 21st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Recursion</strong> <a id="recursion"></a></p>
+<p><strong>Recursion</strong> <a id="week12"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -383,13 +404,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
 </li>
 <li>
-<p><a href="jam5Guide.html">Final exam guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-nov21.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -397,7 +418,10 @@ on lecture content, worksheets, and assignments.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 28th</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Data structures: List and Dictionary</strong> <a id="week13"></a></p>
+</div>
+<div class="ulist">
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
@@ -415,7 +439,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Dec 5th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Final Thoughts. ArrayList, HashMap and Dictionary</strong> <a id="datastructures"></a></p>
+<p><strong>Final Thoughts. ArrayList, HashMap and Dictionary</strong> <a id="week14"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -430,6 +454,12 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-dec05.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 06, <a href="jam6Guide.html">Code jam 06 study guide</a></p>
+</li>
+<li>
+<p>Final exam study guide, <a href="">Final exam study guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -635,7 +665,7 @@ within the time limit!</p>
 <h3 id="_late_policy">Late Policy</h3>
 <div class="paragraph">
 <p>Because practice is so important for learning how to program, we will do frequent
-exercises, assignments, and practice throughout the term.</p>
+exercises, assignments, and quizzes throughout the term.</p>
 </div>
 <div class="paragraph">
 <p>The purpose of this work is to give you hands on experience with the topics
@@ -643,23 +673,18 @@ from class. Most of this work will be due in lecture or labs. The
 weekly time commitment for this course is aimed to be 10 hours or less per week.</p>
 </div>
 <div class="paragraph">
-<p>No late work will be accepted. Why? Because it&#8217;s important that you do not
-fall behind in the material. <strong>It is better to submit incomplete work than to
-fall behind!</strong></p>
+<p>Assignments will generally be due on Thursdays. However, you may request up to two late
+days (until Saturday) if necessary. No submissions beyond Saturday will be accepted.
+This allows us time to grade assignments. And it helps prevent you from falling
+behind.</p>
 </div>
 <div class="paragraph">
-<p>However, we realize that you may not be able to complete a deadline for any
-number of valid reasons. We will drop your lowest assignment, lab, and
-presentation grades.</p>
+<p>If you need to miss a code jam, let the instructor know and the missed credit for the code jam
+will be added to the final exam.</p>
 </div>
 <div class="paragraph">
-<p>If you need to miss a lab, you can submit your exercises
-electronically (to Dropbox) by midnight on the day the exercises are assigned.</p>
-</div>
-<div class="paragraph">
-<p>If you need to miss an exam, you must make arrangements ahead of time. If you
-cannot give notice ahead of time because of a medical emergency, you will
-need to provide a doctor&#8217;s note to schedule a make-up quiz.</p>
+<p>You may need to provide a doctor&#8217;s note if you need special accomodations due to a
+medical emergency.</p>
 </div>
 </div>
 </div>
@@ -785,7 +810,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 14:26:45 -0400
+Last updated 2022-08-28 17:39:53 -0400
 </div>
 </div>
 </body>
