--- a/latePolicy.html
+++ b/latePolicy.html
@@ -444,7 +444,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_late_policy">Late Policy</h3>
 <div class="paragraph">
 <p>Because practice is so important for learning how to program, we will do frequent
-exercises, assignments, and practice throughout the term.</p>
+exercises, assignments, and quizzes throughout the term.</p>
 </div>
 <div class="paragraph">
 <p>The purpose of this work is to give you hands on experience with the topics
@@ -452,29 +452,24 @@ from class. Most of this work will be due in lecture or labs. The
 weekly time commitment for this course is aimed to be 10 hours or less per week.</p>
 </div>
 <div class="paragraph">
-<p>No late work will be accepted. Why? Because it&#8217;s important that you do not
-fall behind in the material. <strong>It is better to submit incomplete work than to
-fall behind!</strong></p>
+<p>Assignments will generally be due on Thursdays. However, you may request up to two late
+days (until Saturday) if necessary. No submissions beyond Saturday will be accepted.
+This allows us time to grade assignments. And it helps prevent you from falling
+behind.</p>
 </div>
 <div class="paragraph">
-<p>However, we realize that you may not be able to complete a deadline for any
-number of valid reasons. We will drop your lowest assignment, lab, and
-presentation grades.</p>
+<p>If you need to miss a code jam, let the instructor know and the missed credit for the code jam
+will be added to the final exam.</p>
 </div>
 <div class="paragraph">
-<p>If you need to miss a lab, you can submit your exercises
-electronically (to Dropbox) by midnight on the day the exercises are assigned.</p>
-</div>
-<div class="paragraph">
-<p>If you need to miss an exam, you must make arrangements ahead of time. If you
-cannot give notice ahead of time because of a medical emergency, you will
-need to provide a doctor&#8217;s note to schedule a make-up quiz.</p>
+<p>You may need to provide a doctor&#8217;s note if you need special accomodations due to a
+medical emergency.</p>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 10:36:51 -0400
+Last updated 2022-08-28 18:16:48 -0400
 </div>
 </div>
 </body>
