--- a/schedule.html
+++ b/schedule.html
@@ -458,7 +458,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Aug 29</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Course introduction, Hello World</strong> <a id="hello"></a></p>
+<p><strong>Course introduction, Hello World</strong> <a id="week01"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -480,6 +480,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Setting up your development environment</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -487,7 +490,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 5</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Variables and data types</strong> <a id="variables"></a></p>
+<p><strong>Variables and data types</strong> <a id="week02"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -509,6 +512,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -516,7 +522,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 12th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Conditionals</strong> <a id="if"></a></p>
+<p><strong>Conditionals</strong> <a id="week03"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -527,13 +533,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="asst02.html">Assignment 2</a>: <strong>Due September 22</strong></p>
 </li>
 <li>
-<p><a href="jam1Guide.html">Jam 1 Study Guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep12.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep12.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 01, <a href="jam1Guide.html">Jam 1 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -542,7 +548,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 19th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Loops</strong> <a id="loop"></a></p>
+<p><strong>Loops</strong> <a id="week04"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -553,13 +559,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="asst03.html">Assignment 3</a>: <strong>Due September 29th</strong></p>
 </li>
 <li>
-<p>Code Jam I: Variables and data types</p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep19.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep19.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -568,7 +574,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Sept 26th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Arrays, Strings, File I/O</strong> <a id="arrays"></a></p>
+<p><strong>Arrays, Strings, File I/O</strong> <a id="week05"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -579,13 +585,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="asst04.html">Assignment 4</a>: <strong>Due October 6</strong></p>
 </li>
 <li>
-<p><a href="jam2Guide.html">Jam 2 Study Guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-sep26.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-sep26.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code jam 02, <a href="jam2Guide.html">Jam 2 Study Guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -594,7 +600,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 3rd</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="functions1"></a></p>
+<p><strong>Functions</strong> <a id="week06"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -609,6 +615,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-oct03.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: TBD</p>
 </li>
 </ul>
 </div></div></td>
@@ -628,7 +637,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 17th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Functions</strong> <a id="functions2"></a></p>
+<p><strong>Functions</strong> <a id="week07"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -644,6 +653,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-oct17.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -651,7 +663,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Oct 24th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Object oriented programming: using objects</strong> <a id="objects1"></a></p>
+<p><strong>Object oriented programming: using objects</strong> <a id="week08"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -667,6 +679,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-oct24.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code jam 03, <a href="jam3Guide.html">Jam 3 Study Guide</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -674,15 +689,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of October 31st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Objects oriented programming: creating objects</strong> <a id="objects2"></a></p>
+<p><strong>Objects oriented programming: creating objects</strong> <a id="week09"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 3.1, 3.2</p>
-</li>
-<li>
-<p><a href="jam3Guide.html">Jam 3 Guide</a></p>
 </li>
 <li>
 <p><a href="asst08.html">Assignment 8</a>: **</p>
@@ -693,6 +705,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-oct31.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -700,7 +715,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 7th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Search and sort</strong> <a id="search"></a></p>
+<p><strong>Search and sort</strong> <a id="week10"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -711,9 +726,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Presentations III: Arrays, strings, advanced IO</p>
 </li>
 <li>
-<p><a href="jam4Guide.html">Jam 4 Guide</a></p>
-</li>
-<li>
 <p><a href="asst09.html">Assignment 9</a>: *Due *</p>
 </li>
 <li>
@@ -722,6 +734,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-nov07.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code jam 04, <a href="jam4Guide.html">Jam 4 Study Guide</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -729,7 +744,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 14th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>More search and sort; Runtime analysis</strong> <a id="analysis"></a></p>
+<p><strong>More search and sort; Runtime analysis</strong> <a id="week11"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -745,6 +760,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: TBD</p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -752,7 +770,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 21st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Recursion</strong> <a id="recursion"></a></p>
+<p><strong>Recursion</strong> <a id="week12"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -760,13 +778,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
 </li>
 <li>
-<p><a href="jam5Guide.html">Final exam guide</a></p>
-</li>
-<li>
 <p><a href="notes-alinen/notes-nov21.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
+</li>
+<li>
+<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -774,7 +792,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 28th</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Data structures: List and Dictionary</strong> <a id="week13"></a></p>
+</div>
+<div class="ulist">
 <ul>
 <li>
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
@@ -792,7 +813,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Dec 5th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Final Thoughts. ArrayList, HashMap and Dictionary</strong> <a id="datastructures"></a></p>
+<p><strong>Final Thoughts. ArrayList, HashMap and Dictionary</strong> <a id="week14"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -808,6 +829,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="notes-azpoliak/notes-dec05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
+<li>
+<p>Lab activity: Code Jam 06, <a href="jam6Guide.html">Code jam 06 study guide</a></p>
+</li>
+<li>
+<p>Final exam study guide, <a href="">Final exam study guide</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -816,7 +843,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:16:48 -0400
+Last updated 2022-08-28 18:23:32 -0400
 </div>
 </div>
 </body>
