--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Working with the command line</p>
 </li>
 </ul>
 </div></div></td>
