--- a/schedule.html
+++ b/schedule.html
@@ -513,7 +513,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-sep05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: TBD</p>
+<p>Lab activity: Working with the command line</p>
 </li>
 </ul>
 </div></div></td>
@@ -843,7 +843,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-28 18:37:21 -0400
+Last updated 2022-08-28 18:39:13 -0400
 </div>
 </div>
 </body>
