asst00: added precourse survey link

--- a/asst00.html
+++ b/asst00.html
@@ -20,10 +20,11 @@
 <ul class="sectlevel2">
 <li><a href="#_try_slack">2.1. Try slack</a></li>
 <li><a href="#_read_the_website">2.2. Read the website</a></li>
-<li><a href="#_setup_java">2.3. Setup Java</a></li>
-<li><a href="#_write_a_program">2.4. Write a program</a></li>
-<li><a href="#_what_to_hand_in">2.5. What to hand-in</a></li>
-<li><a href="#_how_to_hand_in">2.6. How to hand-in</a></li>
+<li><a href="#_pre_course_survey">2.3. Pre-course survey</a></li>
+<li><a href="#_setup_java">2.4. Setup Java</a></li>
+<li><a href="#_write_a_program">2.5. Write a program</a></li>
+<li><a href="#_what_to_hand_in">2.6. What to hand-in</a></li>
+<li><a href="#_how_to_hand_in">2.7. How to hand-in</a></li>
 </ul>
 </li>
 </ul>
@@ -56,6 +57,9 @@
 </li>
 <li>
 <p>Look at the website!</p>
+</li>
+<li>
+<p>Fill out this brief pre-course <a href="https://forms.gle/LwuMrXuezsiGW1h87">survey</a>.</p>
 </li>
 <li>
 <p>Install your development environment</p>
@@ -133,7 +137,13 @@ posted on the course webpage!</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_setup_java">2.3. Setup Java</h3>
+<h3 id="_pre_course_survey">2.3. Pre-course survey</h3>
+<div class="paragraph">
+<p>Fill out this brief pre-course <a href="https://forms.gle/LwuMrXuezsiGW1h87">survey</a>. Your answers will help your instructors get to know you and learn what you hope to get out of this course.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_setup_java">2.4. Setup Java</h3>
 <div class="paragraph">
 <p>This class will teach the fundamentals of programming using Java.</p>
 </div>
@@ -142,7 +152,7 @@ posted on the course webpage!</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_write_a_program">2.4. Write a program</h3>
+<h3 id="_write_a_program">2.5. Write a program</h3>
 <div class="paragraph">
 <p>Write a program, <code>Fortune.java</code>, which prints a fortune like the ones typically found
 in fortune cookies. Use the program as a starting point. The program below is based on
@@ -174,7 +184,7 @@ A journey of a thousand miles begins with a single step.</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_what_to_hand_in">2.5. What to hand-in</h3>
+<h3 id="_what_to_hand_in">2.6. What to hand-in</h3>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -187,7 +197,7 @@ A journey of a thousand miles begins with a single step.</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_how_to_hand_in">2.6. How to hand-in</h3>
+<h3 id="_how_to_hand_in">2.7. How to hand-in</h3>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -203,7 +213,7 @@ email address.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 10:36:51 -0400
+Last updated 2022-08-29 21:13:16 -0400
 </div>
 </div>
 </body>
