azpoliak notes: aug30 attendance sheet

--- a/notes-azpoliak/notes-aug29.html
+++ b/notes-azpoliak/notes-aug29.html
@@ -14,21 +14,27 @@
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_notes_week_of_aug_29">Notes: Week of Aug 29</a></li>
+<li><a href="#_tuesday_aug_30th">Tuesday Aug 30th</a></li>
 </ul>
 </div>
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="_notes_week_of_aug_29">Notes: Week of Aug 29</h2>
+<h2 id="_tuesday_aug_30th">Tuesday Aug 30th</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>Attendance sheet - <a href="https://forms.gle/eDQcnW1DpZUDtCta8" class="bare">https://forms.gle/eDQcnW1DpZUDtCta8</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:14:12 -0400
+Last updated 2022-08-29 22:06:17 -0400
 </div>
 </div>
 </body>
