forgot to push udpated schedule.html in previous commit

--- a/schedule.html
+++ b/schedule.html
@@ -481,6 +481,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-aug29.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture00_introduction_08_30.pdf">Lecture 00 slides (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Setting up your development environment</p>
 </li>
 </ul>
@@ -843,7 +846,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-28 18:39:13 -0400
+Last updated 2022-08-30 12:19:04 -0400
 </div>
 </div>
 </body>
